fix scroll jump on mobile pages -

--- a/style/style.css
+++ b/style/style.css
@@ -331,6 +331,7 @@ body{
 
   #fullImage {
   	height: initial;
+  	width: 100%;
   }
 
   .gridItem {
